Mencoba Conflig di featureA

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Hello Word</h1>
     <h2>Mencoba pull</h2>
+    <h3>Ini adalah penanganan conflig di featureA</h3>
 </body>
 </html>
